force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_fails_to_protect__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_fails_to_protect__c</fullName>
    <inlineHelpText>Caregiver fails to protect the child from serious harm or threatened harm by others.(This may include failure to protect the child from physical abuse, sexual abuse, or neglect)</inlineHelpText>
    <label>Caregiver fails to protect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>