force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_is_able__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_is_able__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Caregiver is able and willing to participate in creating and carrying out safety interventions to protect the child.</inlineHelpText>
    <label>Caregiver is able and willing</label>
    <type>Checkbox</type>
</CustomField>