force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_made_a_plausible_threat__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_made_a_plausible_threat__c</fullName>
    <description>Caregiver made a plausible threat to cause serious physical harm to the child or HAS caused serious physical harm to the child as indicated by : verbal thread of serious injury to the child OR threat of retaliation against the child OR caregiver fears he/she will harm the child.</description>
    <label>Caregiver made a plausible threat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>