force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregiver_s_explanation__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregiver_s_explanation__c</fullName>
    <inlineHelpText>Caregiver&apos;s explanation for an injury to the child is questionable or inconsistent with the type of injury and nature of the injury suggests that the child&apos;s safety may be of immediate concern</inlineHelpText>
    <label>Caregiver&apos;s explanation for an injury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>