force-app/main/default/objects/Assessment__c/fields/SAFEC_Caregivers_justification_or_denial__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Caregivers_justification_or_denial__c</fullName>
    <inlineHelpText>Caregiver&apos;s justification or denial of his/her own harmful behavior or the harmful behavior of others, places the child in immediate danger.</inlineHelpText>
    <label>Caregiver&apos;s justification or denial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>