force-app/main/default/objects/Assessment__c/fields/SAFEC_Cargiver_s_suspected_or_observed__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Cargiver_s_suspected_or_observed__c</fullName>
    <inlineHelpText>Cargiver&apos;s suspected or observed substance abuse/use seriously impairs his/her ability to supervise, protect or care for the child is a drug exposed newborn/infant and the caregiver is unable or  unwilling to corporate with treatment for  substance abuse</inlineHelpText>
    <label>Cargiver&apos;s suspected or observed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>