force-app/main/default/objects/Assessment__c/fields/SAFEC_Case_Worker_Comments__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Case_Worker_Comments__c</fullName>
    <label>Case Worker Comments</label>
    <type>TextArea</type>
</CustomField>