force-app/main/default/objects/Assessment__c/fields/SAFEC_Child__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child has the cognitive, physical and emotional capacity in safety interventions</inlineHelpText>
    <label>Child has the cognitive, physical</label>
    <type>Checkbox</type>
</CustomField>