force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_currently_has_Out_of_Home__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_currently_has_Out_of_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child currently has an Out of Home Program Assignment and it is not Safe for the child to return to this caregiver</inlineHelpText>
    <label>Child currently has Out of Home Program</label>
    <type>Checkbox</type>
</CustomField>