force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_is_Conditionally_Safe_17_16__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_is_Conditionally_Safe_17_16__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child is Conditionally Safe (Any Influences 1-16 is Checked &apos;Yes&apos; All Actions in A Required Case Staffing Have Been Implemented)</inlineHelpText>
    <label>Child is Conditionally Safe 17-16</label>
    <type>Checkbox</type>
</CustomField>