force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_is_conditionally_Safe__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_is_conditionally_Safe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child is conditionally Safe (Any Influences 1-16 is Checked And There is A completed Safety Plan That is Signed by All Parties)</inlineHelpText>
    <label>Child is conditionally Safe</label>
    <type>Checkbox</type>
</CustomField>