force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_is_Safe_Influences_1_18__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_is_Safe_Influences_1_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child is Safe (Influences 1-18 Marked</label>
    <type>Checkbox</type>
</CustomField>