force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_is_UnSafe__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_is_UnSafe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child is UnSafe</inlineHelpText>
    <label>Child is UnSafe</label>
    <type>Checkbox</type>
</CustomField>