force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_s_extreme_anxiety_or_fear__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_s_extreme_anxiety_or_fear__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child&apos;s extreme anxiety or fear the current Placement or home environment</inlineHelpText>
    <label>Child&apos;s extreme anxiety or fear</label>
    <type>Checkbox</type>
</CustomField>