force-app/main/default/objects/Assessment__c/fields/SAFEC_Child_sexual_abuse_is_suspected__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Child_sexual_abuse_is_suspected__c</fullName>
    <inlineHelpText>Child sexual abuse is suspected and circumstances suggest that the child&apos;s safety may be of immediate concern,</inlineHelpText>
    <label>Child sexual abuse is suspected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>