force-app/main/default/objects/Assessment__c/fields/SAFEC_CIS_ID__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_CIS_ID__c</fullName>
    <label>CIS ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>