force-app/main/default/objects/Assessment__c/fields/SAFEC_CPS_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_CPS_Case_ID__c</fullName>
    <label>CPS/Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>