force-app/main/default/objects/Assessment__c/fields/SAFEC_Date_Time_Assessment_Initiated__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Date_Time_Assessment_Initiated__c</fullName>
    <label>Date Time Assessment Initiated</label>
    <type>DateTime</type>
</CustomField>