force-app/main/default/objects/Assessment__c/fields/SAFEC_Date_Time_of_Last_Safety_Plan__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Date_Time_of_Last_Safety_Plan__c</fullName>
    <label>Date Time of Last Safety Plan</label>
    <type>DateTime</type>
</CustomField>