force-app/main/default/objects/Assessment__c/fields/SAFEC_Domestic_violence_exists__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Domestic_violence_exists__c</fullName>
    <inlineHelpText>Domestic violence exists in the home and poses an imminent danger of serious physical and or emotional harm to the child.(A lethality assessment ma be needed to protect other persons in the home.)</inlineHelpText>
    <label>Domestic violence exists in the home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>