force-app/main/default/objects/Assessment__c/fields/SAFEC_Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Head_of_Household__c</fullName>
    <label>Head of Household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>