force-app/main/default/objects/Assessment__c/fields/SAFEC_LDSS__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_LDSS__c</fullName>
    <label>LDSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>