force-app/main/default/objects/Assessment__c/fields/SAFEC_Legal_Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Legal_Guardian_Name__c</fullName>
    <label>Legal Guardian Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>