force-app/main/default/objects/Assessment__c/fields/SAFEC_Previous_services_to_the_caregiver__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Previous_services_to_the_caregiver__c</fullName>
    <inlineHelpText>Previous services to the caregiver regarding similar harmful behaviors. resulted in to change in the caregiver&apos;s behaviors towards the child(ren).</inlineHelpText>
    <label>Previous services to the caregiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>