force-app/main/default/objects/Assessment__c/fields/SAFEC_Relationship__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Relationship__c</fullName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>