force-app/main/default/objects/Assessment__c/fields/SAFEC_Relevant_community_services__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Relevant_community_services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relevant community services or resources are immediately available.</inlineHelpText>
    <label>Relevant community services</label>
    <type>Checkbox</type>
</CustomField>