force-app/main/default/objects/Assessment__c/fields/SAFEC_Significant_diagnosed_medical_or__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Significant_diagnosed_medical_or__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Significant diagnosed medical or mental</label>
    <type>Checkbox</type>
</CustomField>