force-app/main/default/objects/Assessment__c/fields/SAFEC_The_child_has_special_needs__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_The_child_has_special_needs__c</fullName>
    <inlineHelpText>The child has special needs, behaviors or medical concerns and the caregiver does not meet the child&apos;s need for current/immediate medical,dental or mental healthcare.</inlineHelpText>
    <label>The child has special needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>