force-app/main/default/objects/Assessment__c/fields/SAFEC_The_child_is_unable_Comments__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_The_child_is_unable_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>