force-app/main/default/objects/Assessment__c/fields/SAFEC_There_has_been_current_act__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_There_has_been_current_act__c</fullName>
    <description>There has been current act of maltreatment since the last SAFE-C, Where excessive discipline or Physical force against the child, in which a weapon or object (e.g., gun, knife, cord, hanger, etc.,,) was used to inflict or threaten harm to the child.</description>
    <label>There has been current act</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>