force-app/main/default/objects/Assessment__c/fields/SAFEC_There_has_been_current_actComments__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_There_has_been_current_actComments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>