force-app/main/default/objects/Assessment__c/fields/SAFEC_There_have_been_multiple_reports__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_There_have_been_multiple_reports__c</fullName>
    <inlineHelpText>There have been multiple reports from the community or since the last SAFE-C regarding this family, Where ther were previous concerns about the safety of the child(ren).</inlineHelpText>
    <label>There have been multiple reports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>