force-app/main/default/objects/Assessment__c/fields/SAFEC_There_is_evidence_of_a_healthy__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_There_is_evidence_of_a_healthy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There is evidence of a healthy relationship between caregiver and child.</inlineHelpText>
    <label>There is evidence of a healthy relations</label>
    <type>Checkbox</type>
</CustomField>