force-app/main/default/objects/Assessment__c/fields/SAFEC_When_circumstances_suggest__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_When_circumstances_suggest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When circumstances suggest that the child&apos;s safety may be jeopardized</inlineHelpText>
    <label>When circumstances suggest</label>
    <type>Checkbox</type>
</CustomField>