force-app/main/default/objects/Assessment__c/fields/SAFEC_When_The_case_Assessor_discovers__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_When_The_case_Assessor_discovers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When The case Assessor discovers there is a significant change in the composition of the individuals in the home</inlineHelpText>
    <label>When The case Assessor discovers</label>
    <type>Checkbox</type>
</CustomField>