force-app/main/default/objects/Assessment__c/fields/SAFEC_Within_7_Working_days_of_case__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Within_7_Working_days_of_case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Within 7 Working days of case acceptance in service</inlineHelpText>
    <label>Within 7 Working days of case</label>
    <type>Checkbox</type>
</CustomField>