force-app/main/default/objects/Assessment__c/fields/SAFEC_within_7_working_days_prior__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_within_7_working_days_prior__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>within 7 working days prior to beginning unsupervised visitation</inlineHelpText>
    <label>within 7 working days prior to beginning</label>
    <type>Checkbox</type>
</CustomField>