force-app/main/default/objects/Assessment__c/fields/SAFEC_Within_7_working_days_prior_to__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Within_7_working_days_prior_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within 7 working days prior to returning</label>
    <type>Checkbox</type>
</CustomField>