force-app/main/default/objects/Assessment__c/fields/SAFEC_Within_ten_10_working_days__c.field-meta.xml
<CustomField>
    <fullName>SAFEC_Within_ten_10_working_days__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Within ten(10) working days of the assignment or transfer of the case to the assessor</inlineHelpText>
    <label>Within ten(10) working days</label>
    <type>Checkbox</type>
</CustomField>