force-app/main/default/objects/Assessment__c/fields/Safety_Assessment_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Safety_Assessment_Approval_Date_Time__c</fullName>
    <label>Safety Assessment Approval Date Time</label>
    <type>DateTime</type>
</CustomField>