force-app/main/default/objects/Assessment__c/fields/Safety_Assessment_Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Safety_Assessment_Completion_Date_Time__c</fullName>
    <label>Safety Assessment Completion Date Time</label>
    <type>DateTime</type>
</CustomField>