force-app/main/default/objects/Assessment__c/fields/Staff_Member_Interviewed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_Interviewed_Comments__c</fullName>
    <label>Staff Member Interviewed/Comments</label>
    <type>TextArea</type>
</CustomField>