force-app/main/default/objects/Assessment__c/fields/Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval__c</fullName>
    <label>Submit for Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
                <default>true</default>
                <label>Review</label>
            </value>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>