force-app/main/default/objects/Assessment__c/fields/Supervisor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Comments__c</fullName>
    <label>Supervisor Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>