force-app/main/default/objects/Assessment__c/fields/Supervisor_Signature__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Signature__c</fullName>
    <label>Supervisor Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>